src/App.css
.wrapper {
  min-height: calc(100vh - 3rem);
  padding-bottom: 3rem;
  margin: 0 auto;
  padding-left: 1rem;
  padding-right: 1rem;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

@media screen and (min-width: 500px) {
  .wrapper {
    max-width: 600px;
  }
}

@media screen and (min-width: 840px) {
  .wrapper {
    max-width: 840px;
    display: grid;
    grid-template-columns: 3fr 1fr;
  }

  aside h3 {
    margin-top: 2.5rem;
  }
}

.wrapper h1 {
  margin-bottom: 0;
  color: hotpink;
  text-shadow: 3px 2px 0px mediumblue;
  font-size: 3rem;
  margin-top: 2rem;
}

.author-text {
  margin-bottom: 0;
}

.helper-text {
  color: #555;
}

.upload--wrapper {
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.upload--file {
  opacity: 0;
  width: 0.1px;
  height: 0.1px;
  position: absolute;
}

.upload--file-name {
  font-size: 0.85rem;
  color: #555;
  padding-left: 0.5rem;
}

.upload--label {
  display: inline-block;
  width: fit-content;
  position: relative;
  padding: 0.7rem 1.5rem;
  background: lightgray;
  cursor: pointer;
  transition: background 0.3s;
}

.upload--label:hover {
  background: #c2c2c2;
}

.user-image {
  max-width: 100%;
}

.results--wrapper {
  display: flex;
  margin-bottom: 2rem;
  align-items: center;
}

.results--btn {
  margin-right: 1rem;
  font-weight: 700;
  border: 5px solid hotpink;
  color: hotpink;
  background: transparent;
  font-size: inherit;
}

.results--btn:not(:disabled) {
  font-size: 1.25rem;
}

.results--btn:not(:disabled):hover {
  border-color: darkviolet;
  color: darkviolet;
}

.details--wrapper p {
  font-size: 0.85rem;
}

